# cjval

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: image_build.yml
data/: address.json  cjfeat1.json  cube.city.json  cube.txt  cube_20.txt  cube_20_1.jsonl  cube_generic.json  duplicate.json  extension.jsonl  extraattribute.json  japanese.city.json  many.json  many2.json  material.city.json  material2.city.json  material3.city.json  noise1.city.json  o.json  o2.json  o3.json  o4.json  potatoes.city.json  sem.json  sem_point.city.json  texture.city.json  texture2.city.json  texture3.city.json  texture4.city.json  texture5.city.json  texture6.city.json  texture7.city.json  twoextensions.json
docker/: Dockerfile
schemas/11/: cityjson.min.schema.json  cityjsonfeature.min.schema.json
schemas/extensions/: generic.ext.json  manycases.ext.json
schemas/extensions/11/: generic.ext.json
schemas/extensions/20/: noise2.ext.json  potato.ext.json  simpleattribute.ext.json
src/: lib.rs  main.rs
tests/: attributes.rs  children_parents_consistency.rs  cityjsonfeature.rs  duplicate_keys.rs  duplicate_vertices.rs  extensions.rs  invalid_json.rs  material.rs  nonascii.rs  parents_children_consistency.rs  semantic_arrays.rs  semantic_surfaces.rs  texture.rs  unused_vertices.rs  wrong_vertex_index.rs
