[package]
name = "cjval"
version = "0.6.1"
description = "Validation of CityJSON files against its schemas"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cityjson/cjval"
repository = "https://github.com/cityjson/cjval"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = { version = "0.17.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.0"
anyhow = "1.0.31"
indexmap = "1.9.1"
url = { version = "2.2.2", optional = true }
ansi_term = { version = "0.12", optional = true }
reqwest = { version = "0.11.5", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dependencies.clap]
version = "2"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[features]
build-binary = ["url", "ansi_term", "reqwest", "tokio"]

[[bin]]
name = "cjval"
path = "src/bin/cjval.rs"
required-features = ["build-binary"]

[[bin]]
name = "cjfval"
path = "src/bin/cjfval.rs"
required-features = ["build-binary"]

[[bin]]
name = "cjvalext"
path = "src/bin/cjvalext.rs"
required-features = ["build-binary"]